Fix tier alignment by a pixel.

--- a/src/main/webapp/css/main.css
+++ b/src/main/webapp/css/main.css
@@ -112,7 +112,7 @@ abbr {
 	width: 10em;
 	height: 15em;
 	margin: 0 .25em;
-	margin-top: 3px;
+	margin-top: 4px;
 	font-size: 12pt;
 	
 	padding: 1em;
